# aichihongshu

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start.sh  stop.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  site-pages.yml
LOGO/: README.md
app/: __init__.py  cli.py  server.py
app/db/: __init__.py  connection.py  schema.py
app/mcp/: server.py
app/models/: item.py
app/modules/content/: __init__.py  manager.py  prompt_builder.py
app/modules/profile/: analyzer.py
app/routers/: accounts.py  accounts_pool.py  ai.py  analytics.py  content.py  crawler.py  knowledge.py  library.py  profile.py  settings.py
app/services/: account_pool.py  protection.py
client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css  main.tsx
client/src-tauri/: tauri.conf.json
client/src/components/: AIPanel.tsx  ActiveAccountSwitcher.tsx  BodyEditor.tsx  ErrorBoundary.tsx  MdContent.tsx  RichBodyEditor.tsx  RiskAckGate.tsx  Sidebar.tsx  Toast.tsx  ui.tsx  useRiskConfirm.tsx
client/src/hooks/: useAIStream.ts  useHDRSetting.ts  (+1 more)
crawler/: _user_data_dir.py  xhs_analyze.py  xhs_creator.py  xhs_publish.py  xhs_search.py
data/: README.md
docs/: CONTRIBUTING.md  操作手册.md
scripts/: start.sh
site/: README.md  architecture.html  index.html  main.js  product.html  shared.css
site/screens/: accounts.html  dashboard.html  data.html  inspire.html  library.html  notes.html  settings.html  shared.css
首页/: index.html
(+14 files in other folders)
