[project]
name = "rn-home"
version = "0.1.0"
description = "小红书家居类垂直运营助手"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.96.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "mcp[cli]>=1.27.0",
    "python-multipart>=0.0.26",
    "aiomysql>=0.3.2",
]

[project.scripts]
rn = "app.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
